# docmind

./: .dockerignore  .env.example  .gitignore  Dockerfile  Docker启动.bat  Docker启动HTML版.bat  README.md  app.py  config.py  docker-compose.yml  index.html  nginx.conf  nginx.htpasswd  pyproject.toml  requirements.txt  server.py  setup.py  setup_auth.py  setup_https.sh  一键安装.bat  使用说明.txt  启动.bat  启动HTML版.bat  配置HTTPS.bat  首次安装.bat
.claude/: settings.local.json
eval/: dataset.json  evaluate.py  run_eval.py
src/: chunker.py  document_loader.py  embeddings.py  llm.py  logger.py  memory.py  rag_chain.py  reranker.py  retriever.py  vector_store.py
tests/: conftest.py  test_chunker.py  test_document_loader.py  test_llm.py  test_memory.py  test_rag_chain.py  test_server.py  test_vector_store.py
