[project]
name = "tech-doc-qa"
version = "1.0.0"
description = "技术文档智能问答Agent系统"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.0,<2.0",
    "langchain-openai>=0.2.0,<2.0",
    "langchain-community>=0.3.0,<2.0",
    "langgraph>=0.2.0,<2.0",
    "openai>=1.50.0,<3.0",
    "chromadb>=0.5.0,<2.0",
    "pypdf2>=3.0.0,<4.0",
    "streamlit>=1.40.0,<2.0",
    "sentence-transformers>=3.0.0,<4.0",
    "python-dotenv>=1.0.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<10.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
